# manokapanel

./: .cproject  .gitignore  .project  CMakeLists.txt  main.cpp  viragok_kis.c
7003b/: 7003b.cpp  7003b.h  font.c  mano_font.h
buttonpoti/: buttonpoti.cpp  buttonpoti.h
config/: lcdconfig.c  virag.c
freertos/: CMakeLists.txt
freertos/include/: FreeRTOSConfig.h
freertos/portable/GCC/ARM_CM3/: port.c
game-of-life/: Coord.h  Field.cpp  Field.h  display.h  emwin-display.cpp  emwin-display.h  game-of-life.cpp  game-of-life.h
potmeter/: potmeter.cpp  potmeter.h
pwm/: pwm.cpp  pwm.h
stemwin/: CMakeLists.txt
stemwin/STemWinLibrary532/Config/: GUIConf.c  GUIConf.h
stemwin/STemWinLibrary532/OS/: GUI_X_OS.c
stemwin/STemWinLibrary532/Software/: GUIBuilder.ini
stepper/: stepper.cpp  stepper.h
system/: LibraryHacks.cpp
system/f1mdvl_24_8/: Linker.ld  Startup.c  stubs.c
systemview/: CMakeLists.txt
systemview/Config/: SEGGER_RTT_Conf.h  SEGGER_SYSVIEW_Conf.h  SeggerGlobal.h
systemview/SEGGER/: SEGGER.h
test/: mock-display.h  test-Field.cpp  test-game-of-life.cpp
test/mock/timer/: manotimer.h
timer/: manotimer.cpp  manotimer.h
ws2812/: stripEffects.h  ws2812.c  ws2812.h  ws2812_class.cpp  ws2812_class.h
